tests/ui/consts/overflowing-consts.opt_with_overflow_checks.stderr
error[E0080]: attempt to shift left by `8_i32`, which would overflow
  --> $DIR/overflowing-consts.rs:17:22
   |
LL | const _NI8_SHL: i8 = 1i8 << 8;
   |                      ^^^^^^^^ evaluation of `_NI8_SHL` failed here

error[E0080]: attempt to shift left by `8_i32`, which would overflow
  --> $DIR/overflowing-consts.rs:18:26
   |
LL | const _NI8_SHL_P: &i8 = &(1i8 << 8);
   |                          ^^^^^^^^^^ evaluation of `_NI8_SHL_P` failed here

error[E0080]: attempt to shift left by `16_i32`, which would overflow
  --> $DIR/overflowing-consts.rs:20:24
   |
LL | const _NI16_SHL: i16 = 1i16 << 16;
   |                        ^^^^^^^^^^ evaluation of `_NI16_SHL` failed here

error[E0080]: attempt to shift left by `16_i32`, which would overflow
  --> $DIR/overflowing-consts.rs:21:28
   |
LL | const _NI16_SHL_P: &i16 = &(1i16 << 16);
   |                            ^^^^^^^^^^^^ evaluation of `_NI16_SHL_P` failed here

error[E0080]: attempt to shift left by `32_i32`, which would overflow
  --> $DIR/overflowing-consts.rs:23:24
   |
LL | const _NI32_SHL: i32 = 1i32 << 32;
   |                        ^^^^^^^^^^ evaluation of `_NI32_SHL` failed here

error[E0080]: attempt to shift left by `32_i32`, which would overflow
  --> $DIR/overflowing-consts.rs:24:28
   |
LL | const _NI32_SHL_P: &i32 = &(1i32 << 32);
   |                            ^^^^^^^^^^^^ evaluation of `_NI32_SHL_P` failed here

error[E0080]: attempt to shift left by `64_i32`, which would overflow
  --> $DIR/overflowing-consts.rs:26:24
   |
LL | const _NI64_SHL: i64 = 1i64 << 64;
   |                        ^^^^^^^^^^ evaluation of `_NI64_SHL` failed here

error[E0080]: attempt to shift left by `64_i32`, which would overflow
  --> $DIR/overflowing-consts.rs:27:28
   |
LL | const _NI64_SHL_P: &i64 = &(1i64 << 64);
   |                            ^^^^^^^^^^^^ evaluation of `_NI64_SHL_P` failed here

error[E0080]: attempt to shift left by `128_i32`, which would overflow
  --> $DIR/overflowing-consts.rs:29:26
   |
LL | const _NI128_SHL: i128 = 1i128 << 128;
   |                          ^^^^^^^^^^^^ evaluation of `_NI128_SHL` failed here

error[E0080]: attempt to shift left by `128_i32`, which would overflow
  --> $DIR/overflowing-consts.rs:30:30
   |
LL | const _NI128_SHL_P: &i128 = &(1i128 << 128);
   |                              ^^^^^^^^^^^^^^ evaluation of `_NI128_SHL_P` failed here

error[E0080]: attempt to shift left by `8_i32`, which would overflow
  --> $DIR/overflowing-consts.rs:32:22
   |
LL | const _NU8_SHL: u8 = 1u8 << 8;
   |                      ^^^^^^^^ evaluation of `_NU8_SHL` failed here

error[E0080]: attempt to shift left by `8_i32`, which would overflow
  --> $DIR/overflowing-consts.rs:33:26
   |
LL | const _NU8_SHL_P: &u8 = &(1u8 << 8);
   |                          ^^^^^^^^^^ evaluation of `_NU8_SHL_P` failed here

error[E0080]: attempt to shift left by `16_i32`, which would overflow
  --> $DIR/overflowing-consts.rs:35:24
   |
LL | const _NU16_SHL: u16 = 1u16 << 16;
   |                        ^^^^^^^^^^ evaluation of `_NU16_SHL` failed here

error[E0080]: attempt to shift left by `16_i32`, which would overflow
  --> $DIR/overflowing-consts.rs:36:28
   |
LL | const _NU16_SHL_P: &u16 = &(1u16 << 16);
   |                            ^^^^^^^^^^^^ evaluation of `_NU16_SHL_P` failed here

error[E0080]: attempt to shift left by `32_i32`, which would overflow
  --> $DIR/overflowing-consts.rs:38:24
   |
LL | const _NU32_SHL: u32 = 1u32 << 32;
   |                        ^^^^^^^^^^ evaluation of `_NU32_SHL` failed here

error[E0080]: attempt to shift left by `32_i32`, which would overflow
  --> $DIR/overflowing-consts.rs:39:28
   |
LL | const _NU32_SHL_P: &u32 = &(1u32 << 32);
   |                            ^^^^^^^^^^^^ evaluation of `_NU32_SHL_P` failed here

error[E0080]: attempt to shift left by `64_i32`, which would overflow
  --> $DIR/overflowing-consts.rs:41:24
   |
LL | const _NU64_SHL: u64 = 1u64 << 64;
   |                        ^^^^^^^^^^ evaluation of `_NU64_SHL` failed here

error[E0080]: attempt to shift left by `64_i32`, which would overflow
  --> $DIR/overflowing-consts.rs:42:28
   |
LL | const _NU64_SHL_P: &u64 = &(1u64 << 64);
   |                            ^^^^^^^^^^^^ evaluation of `_NU64_SHL_P` failed here

error[E0080]: attempt to shift left by `128_i32`, which would overflow
  --> $DIR/overflowing-consts.rs:44:26
   |
LL | const _NU128_SHL: u128 = 1u128 << 128;
   |                          ^^^^^^^^^^^^ evaluation of `_NU128_SHL` failed here

error[E0080]: attempt to shift left by `128_i32`, which would overflow
  --> $DIR/overflowing-consts.rs:45:30
   |
LL | const _NU128_SHL_P: &u128 = &(1u128 << 128);
   |                              ^^^^^^^^^^^^^^ evaluation of `_NU128_SHL_P` failed here

error[E0080]: attempt to shift left by `%BITS%`, which would overflow
  --> $DIR/overflowing-consts.rs:47:28
   |
LL | const _NISIZE_SHL: isize = 1isize << BITS;
   |                            ^^^^^^^^^^^^^^ evaluation of `_NISIZE_SHL` failed here

error[E0080]: attempt to shift left by `%BITS%`, which would overflow
  --> $DIR/overflowing-consts.rs:48:32
   |
LL | const _NISIZE_SHL_P: &isize = &(1isize << BITS);
   |                                ^^^^^^^^^^^^^^^^ evaluation of `_NISIZE_SHL_P` failed here

error[E0080]: attempt to shift left by `%BITS%`, which would overflow
  --> $DIR/overflowing-consts.rs:50:28
   |
LL | const _NUSIZE_SHL: usize = 1usize << BITS;
   |                            ^^^^^^^^^^^^^^ evaluation of `_NUSIZE_SHL` failed here

error[E0080]: attempt to shift left by `%BITS%`, which would overflow
  --> $DIR/overflowing-consts.rs:51:32
   |
LL | const _NUSIZE_SHL_P: &usize = &(1usize << BITS);
   |                                ^^^^^^^^^^^^^^^^ evaluation of `_NUSIZE_SHL_P` failed here

error[E0080]: attempt to shift right by `8_i32`, which would overflow
  --> $DIR/overflowing-consts.rs:54:22
   |
LL | const _NI8_SHR: i8 = 1i8 >> 8;
   |                      ^^^^^^^^ evaluation of `_NI8_SHR` failed here

error[E0080]: attempt to shift right by `8_i32`, which would overflow
  --> $DIR/overflowing-consts.rs:55:26
   |
LL | const _NI8_SHR_P: &i8 = &(1i8 >> 8);
   |                          ^^^^^^^^^^ evaluation of `_NI8_SHR_P` failed here

error[E0080]: attempt to shift right by `16_i32`, which would overflow
  --> $DIR/overflowing-consts.rs:57:24
   |
LL | const _NI16_SHR: i16 = 1i16 >> 16;
   |                        ^^^^^^^^^^ evaluation of `_NI16_SHR` failed here

error[E0080]: attempt to shift right by `16_i32`, which would overflow
  --> $DIR/overflowing-consts.rs:58:28
   |
LL | const _NI16_SHR_P: &i16 = &(1i16 >> 16);
   |                            ^^^^^^^^^^^^ evaluation of `_NI16_SHR_P` failed here

error[E0080]: attempt to shift right by `32_i32`, which would overflow
  --> $DIR/overflowing-consts.rs:60:24
   |
LL | const _NI32_SHR: i32 = 1i32 >> 32;
   |                        ^^^^^^^^^^ evaluation of `_NI32_SHR` failed here

error[E0080]: attempt to shift right by `32_i32`, which would overflow
  --> $DIR/overflowing-consts.rs:61:28
   |
LL | const _NI32_SHR_P: &i32 = &(1i32 >> 32);
   |                            ^^^^^^^^^^^^ evaluation of `_NI32_SHR_P` failed here

error[E0080]: attempt to shift right by `64_i32`, which would overflow
  --> $DIR/overflowing-consts.rs:63:24
   |
LL | const _NI64_SHR: i64 = 1i64 >> 64;
   |                        ^^^^^^^^^^ evaluation of `_NI64_SHR` failed here

error[E0080]: attempt to shift right by `64_i32`, which would overflow
  --> $DIR/overflowing-consts.rs:64:28
   |
LL | const _NI64_SHR_P: &i64 = &(1i64 >> 64);
   |                            ^^^^^^^^^^^^ evaluation of `_NI64_SHR_P` failed here

error[E0080]: attempt to shift right by `128_i32`, which would overflow
  --> $DIR/overflowing-consts.rs:66:26
   |
LL | const _NI128_SHR: i128 = 1i128 >> 128;
   |                          ^^^^^^^^^^^^ evaluation of `_NI128_SHR` failed here

error[E0080]: attempt to shift right by `128_i32`, which would overflow
  --> $DIR/overflowing-consts.rs:67:30
   |
LL | const _NI128_SHR_P: &i128 = &(1i128 >> 128);
   |                              ^^^^^^^^^^^^^^ evaluation of `_NI128_SHR_P` failed here

error[E0080]: attempt to shift right by `8_i32`, which would overflow
  --> $DIR/overflowing-consts.rs:69:22
   |
LL | const _NU8_SHR: u8 = 1u8 >> 8;
   |                      ^^^^^^^^ evaluation of `_NU8_SHR` failed here

error[E0080]: attempt to shift right by `8_i32`, which would overflow
  --> $DIR/overflowing-consts.rs:70:26
   |
LL | const _NU8_SHR_P: &u8 = &(1u8 >> 8);
   |                          ^^^^^^^^^^ evaluation of `_NU8_SHR_P` failed here

error[E0080]: attempt to shift right by `16_i32`, which would overflow
  --> $DIR/overflowing-consts.rs:72:24
   |
LL | const _NU16_SHR: u16 = 1u16 >> 16;
   |                        ^^^^^^^^^^ evaluation of `_NU16_SHR` failed here

error[E0080]: attempt to shift right by `16_i32`, which would overflow
  --> $DIR/overflowing-consts.rs:73:28
   |
LL | const _NU16_SHR_P: &u16 = &(1u16 >> 16);
   |                            ^^^^^^^^^^^^ evaluation of `_NU16_SHR_P` failed here

error[E0080]: attempt to shift right by `32_i32`, which would overflow
  --> $DIR/overflowing-consts.rs:75:24
   |
LL | const _NU32_SHR: u32 = 1u32 >> 32;
   |                        ^^^^^^^^^^ evaluation of `_NU32_SHR` failed here

error[E0080]: attempt to shift right by `32_i32`, which would overflow
  --> $DIR/overflowing-consts.rs:76:28
   |
LL | const _NU32_SHR_P: &u32 = &(1u32 >> 32);
   |                            ^^^^^^^^^^^^ evaluation of `_NU32_SHR_P` failed here

error[E0080]: attempt to shift right by `64_i32`, which would overflow
  --> $DIR/overflowing-consts.rs:78:24
   |
LL | const _NU64_SHR: u64 = 1u64 >> 64;
   |                        ^^^^^^^^^^ evaluation of `_NU64_SHR` failed here

error[E0080]: attempt to shift right by `64_i32`, which would overflow
  --> $DIR/overflowing-consts.rs:79:28
   |
LL | const _NU64_SHR_P: &u64 = &(1u64 >> 64);
   |                            ^^^^^^^^^^^^ evaluation of `_NU64_SHR_P` failed here

error[E0080]: attempt to shift right by `128_i32`, which would overflow
  --> $DIR/overflowing-consts.rs:81:26
   |
LL | const _NU128_SHR: u128 = 1u128 >> 128;
   |                          ^^^^^^^^^^^^ evaluation of `_NU128_SHR` failed here

error[E0080]: attempt to shift right by `128_i32`, which would overflow
  --> $DIR/overflowing-consts.rs:82:30
   |
LL | const _NU128_SHR_P: &u128 = &(1u128 >> 128);
   |                              ^^^^^^^^^^^^^^ evaluation of `_NU128_SHR_P` failed here

error[E0080]: attempt to shift right by `%BITS%`, which would overflow
  --> $DIR/overflowing-consts.rs:84:28
   |
LL | const _NISIZE_SHR: isize = 1isize >> BITS;
   |                            ^^^^^^^^^^^^^^ evaluation of `_NISIZE_SHR` failed here

error[E0080]: attempt to shift right by `%BITS%`, which would overflow
  --> $DIR/overflowing-consts.rs:85:32
   |
LL | const _NISIZE_SHR_P: &isize = &(1isize >> BITS);
   |                                ^^^^^^^^^^^^^^^^ evaluation of `_NISIZE_SHR_P` failed here

error[E0080]: attempt to shift right by `%BITS%`, which would overflow
  --> $DIR/overflowing-consts.rs:87:28
   |
LL | const _NUSIZE_SHR: usize = 1usize >> BITS;
   |                            ^^^^^^^^^^^^^^ evaluation of `_NUSIZE_SHR` failed here

error[E0080]: attempt to shift right by `%BITS%`, which would overflow
  --> $DIR/overflowing-consts.rs:88:32
   |
LL | const _NUSIZE_SHR_P: &usize = &(1usize >> BITS);
   |                                ^^^^^^^^^^^^^^^^ evaluation of `_NUSIZE_SHR_P` failed here

error[E0080]: attempt to compute `1_i8 + i8::MAX`, which would overflow
  --> $DIR/overflowing-consts.rs:91:22
   |
LL | const _NI8_ADD: i8 = 1i8 + i8::MAX;
   |                      ^^^^^^^^^^^^^ evaluation of `_NI8_ADD` failed here

error[E0080]: attempt to compute `1_i8 + i8::MAX`, which would overflow
  --> $DIR/overflowing-consts.rs:92:26
   |
LL | const _NI8_ADD_P: &i8 = &(1i8 + i8::MAX);
   |                          ^^^^^^^^^^^^^^^ evaluation of `_NI8_ADD_P` failed here

error[E0080]: attempt to compute `1_i16 + i16::MAX`, which would overflow
  --> $DIR/overflowing-consts.rs:94:24
   |
LL | const _NI16_ADD: i16 = 1i16 + i16::MAX;
   |                        ^^^^^^^^^^^^^^^ evaluation of `_NI16_ADD` failed here

error[E0080]: attempt to compute `1_i16 + i16::MAX`, which would overflow
  --> $DIR/overflowing-consts.rs:95:28
   |
LL | const _NI16_ADD_P: &i16 = &(1i16 + i16::MAX);
   |                            ^^^^^^^^^^^^^^^^^ evaluation of `_NI16_ADD_P` failed here

error[E0080]: attempt to compute `1_i32 + i32::MAX`, which would overflow
  --> $DIR/overflowing-consts.rs:97:24
   |
LL | const _NI32_ADD: i32 = 1i32 + i32::MAX;
   |                        ^^^^^^^^^^^^^^^ evaluation of `_NI32_ADD` failed here

error[E0080]: attempt to compute `1_i32 + i32::MAX`, which would overflow
  --> $DIR/overflowing-consts.rs:98:28
   |
LL | const _NI32_ADD_P: &i32 = &(1i32 + i32::MAX);
   |                            ^^^^^^^^^^^^^^^^^ evaluation of `_NI32_ADD_P` failed here

error[E0080]: attempt to compute `1_i64 + i64::MAX`, which would overflow
  --> $DIR/overflowing-consts.rs:100:24
   |
LL | const _NI64_ADD: i64 = 1i64 + i64::MAX;
   |                        ^^^^^^^^^^^^^^^ evaluation of `_NI64_ADD` failed here

error[E0080]: attempt to compute `1_i64 + i64::MAX`, which would overflow
  --> $DIR/overflowing-consts.rs:101:28
   |
LL | const _NI64_ADD_P: &i64 = &(1i64 + i64::MAX);
   |                            ^^^^^^^^^^^^^^^^^ evaluation of `_NI64_ADD_P` failed here

error[E0080]: attempt to compute `1_i128 + i128::MAX`, which would overflow
  --> $DIR/overflowing-consts.rs:103:26
   |
LL | const _NI128_ADD: i128 = 1i128 + i128::MAX;
   |                          ^^^^^^^^^^^^^^^^^ evaluation of `_NI128_ADD` failed here

error[E0080]: attempt to compute `1_i128 + i128::MAX`, which would overflow
  --> $DIR/overflowing-consts.rs:104:30
   |
LL | const _NI128_ADD_P: &i128 = &(1i128 + i128::MAX);
   |                              ^^^^^^^^^^^^^^^^^^^ evaluation of `_NI128_ADD_P` failed here

error[E0080]: attempt to compute `1_u8 + u8::MAX`, which would overflow
  --> $DIR/overflowing-consts.rs:106:22
   |
LL | const _NU8_ADD: u8 = 1u8 + u8::MAX;
   |                      ^^^^^^^^^^^^^ evaluation of `_NU8_ADD` failed here

error[E0080]: attempt to compute `1_u8 + u8::MAX`, which would overflow
  --> $DIR/overflowing-consts.rs:107:26
   |
LL | const _NU8_ADD_P: &u8 = &(1u8 + u8::MAX);
   |                          ^^^^^^^^^^^^^^^ evaluation of `_NU8_ADD_P` failed here

error[E0080]: attempt to compute `1_u16 + u16::MAX`, which would overflow
  --> $DIR/overflowing-consts.rs:109:24
   |
LL | const _NU16_ADD: u16 = 1u16 + u16::MAX;
   |                        ^^^^^^^^^^^^^^^ evaluation of `_NU16_ADD` failed here

error[E0080]: attempt to compute `1_u16 + u16::MAX`, which would overflow
  --> $DIR/overflowing-consts.rs:110:28
   |
LL | const _NU16_ADD_P: &u16 = &(1u16 + u16::MAX);
   |                            ^^^^^^^^^^^^^^^^^ evaluation of `_NU16_ADD_P` failed here

error[E0080]: attempt to compute `1_u32 + u32::MAX`, which would overflow
  --> $DIR/overflowing-consts.rs:112:24
   |
LL | const _NU32_ADD: u32 = 1u32 + u32::MAX;
   |                        ^^^^^^^^^^^^^^^ evaluation of `_NU32_ADD` failed here

error[E0080]: attempt to compute `1_u32 + u32::MAX`, which would overflow
  --> $DIR/overflowing-consts.rs:113:28
   |
LL | const _NU32_ADD_P: &u32 = &(1u32 + u32::MAX);
   |                            ^^^^^^^^^^^^^^^^^ evaluation of `_NU32_ADD_P` failed here

error[E0080]: attempt to compute `1_u64 + u64::MAX`, which would overflow
  --> $DIR/overflowing-consts.rs:115:24
   |
LL | const _NU64_ADD: u64 = 1u64 + u64::MAX;
   |                        ^^^^^^^^^^^^^^^ evaluation of `_NU64_ADD` failed here

error[E0080]: attempt to compute `1_u64 + u64::MAX`, which would overflow
  --> $DIR/overflowing-consts.rs:116:28
   |
LL | const _NU64_ADD_P: &u64 = &(1u64 + u64::MAX);
   |                            ^^^^^^^^^^^^^^^^^ evaluation of `_NU64_ADD_P` failed here

error[E0080]: attempt to compute `1_u128 + u128::MAX`, which would overflow
  --> $DIR/overflowing-consts.rs:118:26
   |
LL | const _NU128_ADD: u128 = 1u128 + u128::MAX;
   |                          ^^^^^^^^^^^^^^^^^ evaluation of `_NU128_ADD` failed here

error[E0080]: attempt to compute `1_u128 + u128::MAX`, which would overflow
  --> $DIR/overflowing-consts.rs:119:30
   |
LL | const _NU128_ADD_P: &u128 = &(1u128 + u128::MAX);
   |                              ^^^^^^^^^^^^^^^^^^^ evaluation of `_NU128_ADD_P` failed here

error[E0080]: attempt to compute `1_isize + isize::MAX`, which would overflow
  --> $DIR/overflowing-consts.rs:121:28
   |
LL | const _NISIZE_ADD: isize = 1isize + isize::MAX;
   |                            ^^^^^^^^^^^^^^^^^^^ evaluation of `_NISIZE_ADD` failed here

error[E0080]: attempt to compute `1_isize + isize::MAX`, which would overflow
  --> $DIR/overflowing-consts.rs:122:32
   |
LL | const _NISIZE_ADD_P: &isize = &(1isize + isize::MAX);
   |                                ^^^^^^^^^^^^^^^^^^^^^ evaluation of `_NISIZE_ADD_P` failed here

error[E0080]: attempt to compute `1_usize + usize::MAX`, which would overflow
  --> $DIR/overflowing-consts.rs:124:28
   |
LL | const _NUSIZE_ADD: usize = 1usize + usize::MAX;
   |                            ^^^^^^^^^^^^^^^^^^^ evaluation of `_NUSIZE_ADD` failed here

error[E0080]: attempt to compute `1_usize + usize::MAX`, which would overflow
  --> $DIR/overflowing-consts.rs:125:32
   |
LL | const _NUSIZE_ADD_P: &usize = &(1usize + usize::MAX);
   |                                ^^^^^^^^^^^^^^^^^^^^^ evaluation of `_NUSIZE_ADD_P` failed here

error[E0080]: attempt to compute `-5_i8 - i8::MAX`, which would overflow
  --> $DIR/overflowing-consts.rs:128:22
   |
LL | const _NI8_SUB: i8 = -5i8 - i8::MAX;
   |                      ^^^^^^^^^^^^^^ evaluation of `_NI8_SUB` failed here

error[E0080]: attempt to compute `-5_i8 - i8::MAX`, which would overflow
  --> $DIR/overflowing-consts.rs:129:26
   |
LL | const _NI8_SUB_P: &i8 = &(-5i8 - i8::MAX);
   |                          ^^^^^^^^^^^^^^^^ evaluation of `_NI8_SUB_P` failed here

error[E0080]: attempt to compute `-5_i16 - i16::MAX`, which would overflow
  --> $DIR/overflowing-consts.rs:131:24
   |
LL | const _NI16_SUB: i16 = -5i16 - i16::MAX;
   |                        ^^^^^^^^^^^^^^^^ evaluation of `_NI16_SUB` failed here

error[E0080]: attempt to compute `-5_i16 - i16::MAX`, which would overflow
  --> $DIR/overflowing-consts.rs:132:28
   |
LL | const _NI16_SUB_P: &i16 = &(-5i16 - i16::MAX);
   |                            ^^^^^^^^^^^^^^^^^^ evaluation of `_NI16_SUB_P` failed here

error[E0080]: attempt to compute `-5_i32 - i32::MAX`, which would overflow
  --> $DIR/overflowing-consts.rs:134:24
   |
LL | const _NI32_SUB: i32 = -5i32 - i32::MAX;
   |                        ^^^^^^^^^^^^^^^^ evaluation of `_NI32_SUB` failed here

error[E0080]: attempt to compute `-5_i32 - i32::MAX`, which would overflow
  --> $DIR/overflowing-consts.rs:135:28
   |
LL | const _NI32_SUB_P: &i32 = &(-5i32 - i32::MAX);
   |                            ^^^^^^^^^^^^^^^^^^ evaluation of `_NI32_SUB_P` failed here

error[E0080]: attempt to compute `-5_i64 - i64::MAX`, which would overflow
  --> $DIR/overflowing-consts.rs:137:24
   |
LL | const _NI64_SUB: i64 = -5i64 - i64::MAX;
   |                        ^^^^^^^^^^^^^^^^ evaluation of `_NI64_SUB` failed here

error[E0080]: attempt to compute `-5_i64 - i64::MAX`, which would overflow
  --> $DIR/overflowing-consts.rs:138:28
   |
LL | const _NI64_SUB_P: &i64 = &(-5i64 - i64::MAX);
   |                            ^^^^^^^^^^^^^^^^^^ evaluation of `_NI64_SUB_P` failed here

error[E0080]: attempt to compute `-5_i128 - i128::MAX`, which would overflow
  --> $DIR/overflowing-consts.rs:140:26
   |
LL | const _NI128_SUB: i128 = -5i128 - i128::MAX;
   |                          ^^^^^^^^^^^^^^^^^^ evaluation of `_NI128_SUB` failed here

error[E0080]: attempt to compute `-5_i128 - i128::MAX`, which would overflow
  --> $DIR/overflowing-consts.rs:141:30
   |
LL | const _NI128_SUB_P: &i128 = &(-5i128 - i128::MAX);
   |                              ^^^^^^^^^^^^^^^^^^^^ evaluation of `_NI128_SUB_P` failed here

error[E0080]: attempt to compute `1_u8 - 5_u8`, which would overflow
  --> $DIR/overflowing-consts.rs:143:22
   |
LL | const _NU8_SUB: u8 = 1u8 - 5;
   |                      ^^^^^^^ evaluation of `_NU8_SUB` failed here

error[E0080]: attempt to compute `1_u8 - 5_u8`, which would overflow
  --> $DIR/overflowing-consts.rs:144:26
   |
LL | const _NU8_SUB_P: &u8 = &(1u8 - 5);
   |                          ^^^^^^^^^ evaluation of `_NU8_SUB_P` failed here

error[E0080]: attempt to compute `1_u16 - 5_u16`, which would overflow
  --> $DIR/overflowing-consts.rs:146:24
   |
LL | const _NU16_SUB: u16 = 1u16 - 5;
   |                        ^^^^^^^^ evaluation of `_NU16_SUB` failed here

error[E0080]: attempt to compute `1_u16 - 5_u16`, which would overflow
  --> $DIR/overflowing-consts.rs:147:28
   |
LL | const _NU16_SUB_P: &u16 = &(1u16 - 5);
   |                            ^^^^^^^^^^ evaluation of `_NU16_SUB_P` failed here

error[E0080]: attempt to compute `1_u32 - 5_u32`, which would overflow
  --> $DIR/overflowing-consts.rs:149:24
   |
LL | const _NU32_SUB: u32 = 1u32 - 5;
   |                        ^^^^^^^^ evaluation of `_NU32_SUB` failed here

error[E0080]: attempt to compute `1_u32 - 5_u32`, which would overflow
  --> $DIR/overflowing-consts.rs:150:28
   |
LL | const _NU32_SUB_P: &u32 = &(1u32 - 5);
   |                            ^^^^^^^^^^ evaluation of `_NU32_SUB_P` failed here

error[E0080]: attempt to compute `1_u64 - 5_u64`, which would overflow
  --> $DIR/overflowing-consts.rs:152:24
   |
LL | const _NU64_SUB: u64 = 1u64 - 5;
   |                        ^^^^^^^^ evaluation of `_NU64_SUB` failed here

error[E0080]: attempt to compute `1_u64 - 5_u64`, which would overflow
  --> $DIR/overflowing-consts.rs:153:28
   |
LL | const _NU64_SUB_P: &u64 = &(1u64 - 5);
   |                            ^^^^^^^^^^ evaluation of `_NU64_SUB_P` failed here

error[E0080]: attempt to compute `1_u128 - 5_u128`, which would overflow
  --> $DIR/overflowing-consts.rs:155:26
   |
LL | const _NU128_SUB: u128 = 1u128 - 5;
   |                          ^^^^^^^^^ evaluation of `_NU128_SUB` failed here

error[E0080]: attempt to compute `1_u128 - 5_u128`, which would overflow
  --> $DIR/overflowing-consts.rs:156:30
   |
LL | const _NU128_SUB_P: &u128 = &(1u128 - 5);
   |                              ^^^^^^^^^^^ evaluation of `_NU128_SUB_P` failed here

error[E0080]: attempt to compute `-5_isize - isize::MAX`, which would overflow
  --> $DIR/overflowing-consts.rs:158:28
   |
LL | const _NISIZE_SUB: isize = -5isize - isize::MAX;
   |                            ^^^^^^^^^^^^^^^^^^^^ evaluation of `_NISIZE_SUB` failed here

error[E0080]: attempt to compute `-5_isize - isize::MAX`, which would overflow
  --> $DIR/overflowing-consts.rs:159:32
   |
LL | const _NISIZE_SUB_P: &isize = &(-5isize - isize::MAX);
   |                                ^^^^^^^^^^^^^^^^^^^^^^ evaluation of `_NISIZE_SUB_P` failed here

error[E0080]: attempt to compute `1_usize - 5_usize`, which would overflow
  --> $DIR/overflowing-consts.rs:161:28
   |
LL | const _NUSIZE_SUB: usize = 1usize - 5;
   |                            ^^^^^^^^^^ evaluation of `_NUSIZE_SUB` failed here

error[E0080]: attempt to compute `1_usize - 5_usize`, which would overflow
  --> $DIR/overflowing-consts.rs:162:32
   |
LL | const _NUSIZE_SUB_P: &usize = &(1usize - 5);
   |                                ^^^^^^^^^^^^ evaluation of `_NUSIZE_SUB_P` failed here

error[E0080]: attempt to compute `i8::MAX * 5_i8`, which would overflow
  --> $DIR/overflowing-consts.rs:165:22
   |
LL | const _NI8_MUL: i8 = i8::MAX * 5;
   |                      ^^^^^^^^^^^ evaluation of `_NI8_MUL` failed here

error[E0080]: attempt to compute `i8::MAX * 5_i8`, which would overflow
  --> $DIR/overflowing-consts.rs:166:26
   |
LL | const _NI8_MUL_P: &i8 = &(i8::MAX * 5);
   |                          ^^^^^^^^^^^^^ evaluation of `_NI8_MUL_P` failed here

error[E0080]: attempt to compute `i16::MAX * 5_i16`, which would overflow
  --> $DIR/overflowing-consts.rs:168:24
   |
LL | const _NI16_MUL: i16 = i16::MAX * 5;
   |                        ^^^^^^^^^^^^ evaluation of `_NI16_MUL` failed here

error[E0080]: attempt to compute `i16::MAX * 5_i16`, which would overflow
  --> $DIR/overflowing-consts.rs:169:28
   |
LL | const _NI16_MUL_P: &i16 = &(i16::MAX * 5);
   |                            ^^^^^^^^^^^^^^ evaluation of `_NI16_MUL_P` failed here

error[E0080]: attempt to compute `i32::MAX * 5_i32`, which would overflow
  --> $DIR/overflowing-consts.rs:171:24
   |
LL | const _NI32_MUL: i32 = i32::MAX * 5;
   |                        ^^^^^^^^^^^^ evaluation of `_NI32_MUL` failed here

error[E0080]: attempt to compute `i32::MAX * 5_i32`, which would overflow
  --> $DIR/overflowing-consts.rs:172:28
   |
LL | const _NI32_MUL_P: &i32 = &(i32::MAX * 5);
   |                            ^^^^^^^^^^^^^^ evaluation of `_NI32_MUL_P` failed here

error[E0080]: attempt to compute `i64::MAX * 5_i64`, which would overflow
  --> $DIR/overflowing-consts.rs:174:24
   |
LL | const _NI64_MUL: i64 = i64::MAX * 5;
   |                        ^^^^^^^^^^^^ evaluation of `_NI64_MUL` failed here

error[E0080]: attempt to compute `i64::MAX * 5_i64`, which would overflow
  --> $DIR/overflowing-consts.rs:175:28
   |
LL | const _NI64_MUL_P: &i64 = &(i64::MAX * 5);
   |                            ^^^^^^^^^^^^^^ evaluation of `_NI64_MUL_P` failed here

error[E0080]: attempt to compute `i128::MAX * 5_i128`, which would overflow
  --> $DIR/overflowing-consts.rs:177:26
   |
LL | const _NI128_MUL: i128 = i128::MAX * 5;
   |                          ^^^^^^^^^^^^^ evaluation of `_NI128_MUL` failed here

error[E0080]: attempt to compute `i128::MAX * 5_i128`, which would overflow
  --> $DIR/overflowing-consts.rs:178:30
   |
LL | const _NI128_MUL_P: &i128 = &(i128::MAX * 5);
   |                              ^^^^^^^^^^^^^^^ evaluation of `_NI128_MUL_P` failed here

error[E0080]: attempt to compute `u8::MAX * 5_u8`, which would overflow
  --> $DIR/overflowing-consts.rs:180:22
   |
LL | const _NU8_MUL: u8 = u8::MAX * 5;
   |                      ^^^^^^^^^^^ evaluation of `_NU8_MUL` failed here

error[E0080]: attempt to compute `u8::MAX * 5_u8`, which would overflow
  --> $DIR/overflowing-consts.rs:181:26
   |
LL | const _NU8_MUL_P: &u8 = &(u8::MAX * 5);
   |                          ^^^^^^^^^^^^^ evaluation of `_NU8_MUL_P` failed here

error[E0080]: attempt to compute `u16::MAX * 5_u16`, which would overflow
  --> $DIR/overflowing-consts.rs:183:24
   |
LL | const _NU16_MUL: u16 = u16::MAX * 5;
   |                        ^^^^^^^^^^^^ evaluation of `_NU16_MUL` failed here

error[E0080]: attempt to compute `u16::MAX * 5_u16`, which would overflow
  --> $DIR/overflowing-consts.rs:184:28
   |
LL | const _NU16_MUL_P: &u16 = &(u16::MAX * 5);
   |                            ^^^^^^^^^^^^^^ evaluation of `_NU16_MUL_P` failed here

error[E0080]: attempt to compute `u32::MAX * 5_u32`, which would overflow
  --> $DIR/overflowing-consts.rs:186:24
   |
LL | const _NU32_MUL: u32 = u32::MAX * 5;
   |                        ^^^^^^^^^^^^ evaluation of `_NU32_MUL` failed here

error[E0080]: attempt to compute `u32::MAX * 5_u32`, which would overflow
  --> $DIR/overflowing-consts.rs:187:28
   |
LL | const _NU32_MUL_P: &u32 = &(u32::MAX * 5);
   |                            ^^^^^^^^^^^^^^ evaluation of `_NU32_MUL_P` failed here

error[E0080]: attempt to compute `u64::MAX * 5_u64`, which would overflow
  --> $DIR/overflowing-consts.rs:189:24
   |
LL | const _NU64_MUL: u64 = u64::MAX * 5;
   |                        ^^^^^^^^^^^^ evaluation of `_NU64_MUL` failed here

error[E0080]: attempt to compute `u64::MAX * 5_u64`, which would overflow
  --> $DIR/overflowing-consts.rs:190:28
   |
LL | const _NU64_MUL_P: &u64 = &(u64::MAX * 5);
   |                            ^^^^^^^^^^^^^^ evaluation of `_NU64_MUL_P` failed here

error[E0080]: attempt to compute `u128::MAX * 5_u128`, which would overflow
  --> $DIR/overflowing-consts.rs:192:26
   |
LL | const _NU128_MUL: u128 = u128::MAX * 5;
   |                          ^^^^^^^^^^^^^ evaluation of `_NU128_MUL` failed here

error[E0080]: attempt to compute `u128::MAX * 5_u128`, which would overflow
  --> $DIR/overflowing-consts.rs:193:30
   |
LL | const _NU128_MUL_P: &u128 = &(u128::MAX * 5);
   |                              ^^^^^^^^^^^^^^^ evaluation of `_NU128_MUL_P` failed here

error[E0080]: attempt to compute `isize::MAX * 5_isize`, which would overflow
  --> $DIR/overflowing-consts.rs:195:28
   |
LL | const _NISIZE_MUL: isize = isize::MAX * 5;
   |                            ^^^^^^^^^^^^^^ evaluation of `_NISIZE_MUL` failed here

error[E0080]: attempt to compute `isize::MAX * 5_isize`, which would overflow
  --> $DIR/overflowing-consts.rs:196:32
   |
LL | const _NISIZE_MUL_P: &isize = &(isize::MAX * 5);
   |                                ^^^^^^^^^^^^^^^^ evaluation of `_NISIZE_MUL_P` failed here

error[E0080]: attempt to compute `usize::MAX * 5_usize`, which would overflow
  --> $DIR/overflowing-consts.rs:198:28
   |
LL | const _NUSIZE_MUL: usize = usize::MAX * 5;
   |                            ^^^^^^^^^^^^^^ evaluation of `_NUSIZE_MUL` failed here

error[E0080]: attempt to compute `usize::MAX * 5_usize`, which would overflow
  --> $DIR/overflowing-consts.rs:199:32
   |
LL | const _NUSIZE_MUL_P: &usize = &(usize::MAX * 5);
   |                                ^^^^^^^^^^^^^^^^ evaluation of `_NUSIZE_MUL_P` failed here

error[E0080]: attempt to divide `1_i8` by zero
  --> $DIR/overflowing-consts.rs:202:22
   |
LL | const _NI8_DIV: i8 = 1i8 / 0;
   |                      ^^^^^^^ evaluation of `_NI8_DIV` failed here

error[E0080]: attempt to divide `1_i8` by zero
  --> $DIR/overflowing-consts.rs:203:26
   |
LL | const _NI8_DIV_P: &i8 = &(1i8 / 0);
   |                          ^^^^^^^^^ evaluation of `_NI8_DIV_P` failed here

error[E0080]: attempt to divide `1_i16` by zero
  --> $DIR/overflowing-consts.rs:205:24
   |
LL | const _NI16_DIV: i16 = 1i16 / 0;
   |                        ^^^^^^^^ evaluation of `_NI16_DIV` failed here

error[E0080]: attempt to divide `1_i16` by zero
  --> $DIR/overflowing-consts.rs:206:28
   |
LL | const _NI16_DIV_P: &i16 = &(1i16 / 0);
   |                            ^^^^^^^^^^ evaluation of `_NI16_DIV_P` failed here

error[E0080]: attempt to divide `1_i32` by zero
  --> $DIR/overflowing-consts.rs:208:24
   |
LL | const _NI32_DIV: i32 = 1i32 / 0;
   |                        ^^^^^^^^ evaluation of `_NI32_DIV` failed here

error[E0080]: attempt to divide `1_i32` by zero
  --> $DIR/overflowing-consts.rs:209:28
   |
LL | const _NI32_DIV_P: &i32 = &(1i32 / 0);
   |                            ^^^^^^^^^^ evaluation of `_NI32_DIV_P` failed here

error[E0080]: attempt to divide `1_i64` by zero
  --> $DIR/overflowing-consts.rs:211:24
   |
LL | const _NI64_DIV: i64 = 1i64 / 0;
   |                        ^^^^^^^^ evaluation of `_NI64_DIV` failed here

error[E0080]: attempt to divide `1_i64` by zero
  --> $DIR/overflowing-consts.rs:212:28
   |
LL | const _NI64_DIV_P: &i64 = &(1i64 / 0);
   |                            ^^^^^^^^^^ evaluation of `_NI64_DIV_P` failed here

error[E0080]: attempt to divide `1_i128` by zero
  --> $DIR/overflowing-consts.rs:214:26
   |
LL | const _NI128_DIV: i128 = 1i128 / 0;
   |                          ^^^^^^^^^ evaluation of `_NI128_DIV` failed here

error[E0080]: attempt to divide `1_i128` by zero
  --> $DIR/overflowing-consts.rs:215:30
   |
LL | const _NI128_DIV_P: &i128 = &(1i128 / 0);
   |                              ^^^^^^^^^^^ evaluation of `_NI128_DIV_P` failed here

error[E0080]: attempt to divide `1_u8` by zero
  --> $DIR/overflowing-consts.rs:217:22
   |
LL | const _NU8_DIV: u8 = 1u8 / 0;
   |                      ^^^^^^^ evaluation of `_NU8_DIV` failed here

error[E0080]: attempt to divide `1_u8` by zero
  --> $DIR/overflowing-consts.rs:218:26
   |
LL | const _NU8_DIV_P: &u8 = &(1u8 / 0);
   |                          ^^^^^^^^^ evaluation of `_NU8_DIV_P` failed here

error[E0080]: attempt to divide `1_u16` by zero
  --> $DIR/overflowing-consts.rs:220:24
   |
LL | const _NU16_DIV: u16 = 1u16 / 0;
   |                        ^^^^^^^^ evaluation of `_NU16_DIV` failed here

error[E0080]: attempt to divide `1_u16` by zero
  --> $DIR/overflowing-consts.rs:221:28
   |
LL | const _NU16_DIV_P: &u16 = &(1u16 / 0);
   |                            ^^^^^^^^^^ evaluation of `_NU16_DIV_P` failed here

error[E0080]: attempt to divide `1_u32` by zero
  --> $DIR/overflowing-consts.rs:223:24
   |
LL | const _NU32_DIV: u32 = 1u32 / 0;
   |                        ^^^^^^^^ evaluation of `_NU32_DIV` failed here

error[E0080]: attempt to divide `1_u32` by zero
  --> $DIR/overflowing-consts.rs:224:28
   |
LL | const _NU32_DIV_P: &u32 = &(1u32 / 0);
   |                            ^^^^^^^^^^ evaluation of `_NU32_DIV_P` failed here

error[E0080]: attempt to divide `1_u64` by zero
  --> $DIR/overflowing-consts.rs:226:24
   |
LL | const _NU64_DIV: u64 = 1u64 / 0;
   |                        ^^^^^^^^ evaluation of `_NU64_DIV` failed here

error[E0080]: attempt to divide `1_u64` by zero
  --> $DIR/overflowing-consts.rs:227:28
   |
LL | const _NU64_DIV_P: &u64 = &(1u64 / 0);
   |                            ^^^^^^^^^^ evaluation of `_NU64_DIV_P` failed here

error[E0080]: attempt to divide `1_u128` by zero
  --> $DIR/overflowing-consts.rs:229:26
   |
LL | const _NU128_DIV: u128 = 1u128 / 0;
   |                          ^^^^^^^^^ evaluation of `_NU128_DIV` failed here

error[E0080]: attempt to divide `1_u128` by zero
  --> $DIR/overflowing-consts.rs:230:30
   |
LL | const _NU128_DIV_P: &u128 = &(1u128 / 0);
   |                              ^^^^^^^^^^^ evaluation of `_NU128_DIV_P` failed here

error[E0080]: attempt to divide `1_isize` by zero
  --> $DIR/overflowing-consts.rs:232:28
   |
LL | const _NISIZE_DIV: isize = 1isize / 0;
   |                            ^^^^^^^^^^ evaluation of `_NISIZE_DIV` failed here

error[E0080]: attempt to divide `1_isize` by zero
  --> $DIR/overflowing-consts.rs:233:32
   |
LL | const _NISIZE_DIV_P: &isize = &(1isize / 0);
   |                                ^^^^^^^^^^^^ evaluation of `_NISIZE_DIV_P` failed here

error[E0080]: attempt to divide `1_usize` by zero
  --> $DIR/overflowing-consts.rs:235:28
   |
LL | const _NUSIZE_DIV: usize = 1usize / 0;
   |                            ^^^^^^^^^^ evaluation of `_NUSIZE_DIV` failed here

error[E0080]: attempt to divide `1_usize` by zero
  --> $DIR/overflowing-consts.rs:236:32
   |
LL | const _NUSIZE_DIV_P: &usize = &(1usize / 0);
   |                                ^^^^^^^^^^^^ evaluation of `_NUSIZE_DIV_P` failed here

error[E0080]: attempt to calculate the remainder of `1_i8` with a divisor of zero
  --> $DIR/overflowing-consts.rs:239:22
   |
LL | const _NI8_MOD: i8 = 1i8 % 0;
   |                      ^^^^^^^ evaluation of `_NI8_MOD` failed here

error[E0080]: attempt to calculate the remainder of `1_i8` with a divisor of zero
  --> $DIR/overflowing-consts.rs:240:26
   |
LL | const _NI8_MOD_P: &i8 = &(1i8 % 0);
   |                          ^^^^^^^^^ evaluation of `_NI8_MOD_P` failed here

error[E0080]: attempt to calculate the remainder of `1_i16` with a divisor of zero
  --> $DIR/overflowing-consts.rs:242:24
   |
LL | const _NI16_MOD: i16 = 1i16 % 0;
   |                        ^^^^^^^^ evaluation of `_NI16_MOD` failed here

error[E0080]: attempt to calculate the remainder of `1_i16` with a divisor of zero
  --> $DIR/overflowing-consts.rs:243:28
   |
LL | const _NI16_MOD_P: &i16 = &(1i16 % 0);
   |                            ^^^^^^^^^^ evaluation of `_NI16_MOD_P` failed here

error[E0080]: attempt to calculate the remainder of `1_i32` with a divisor of zero
  --> $DIR/overflowing-consts.rs:245:24
   |
LL | const _NI32_MOD: i32 = 1i32 % 0;
   |                        ^^^^^^^^ evaluation of `_NI32_MOD` failed here

error[E0080]: attempt to calculate the remainder of `1_i32` with a divisor of zero
  --> $DIR/overflowing-consts.rs:246:28
   |
LL | const _NI32_MOD_P: &i32 = &(1i32 % 0);
   |                            ^^^^^^^^^^ evaluation of `_NI32_MOD_P` failed here

error[E0080]: attempt to calculate the remainder of `1_i64` with a divisor of zero
  --> $DIR/overflowing-consts.rs:248:24
   |
LL | const _NI64_MOD: i64 = 1i64 % 0;
   |                        ^^^^^^^^ evaluation of `_NI64_MOD` failed here

error[E0080]: attempt to calculate the remainder of `1_i64` with a divisor of zero
  --> $DIR/overflowing-consts.rs:249:28
   |
LL | const _NI64_MOD_P: &i64 = &(1i64 % 0);
   |                            ^^^^^^^^^^ evaluation of `_NI64_MOD_P` failed here

error[E0080]: attempt to calculate the remainder of `1_i128` with a divisor of zero
  --> $DIR/overflowing-consts.rs:251:26
   |
LL | const _NI128_MOD: i128 = 1i128 % 0;
   |                          ^^^^^^^^^ evaluation of `_NI128_MOD` failed here

error[E0080]: attempt to calculate the remainder of `1_i128` with a divisor of zero
  --> $DIR/overflowing-consts.rs:252:30
   |
LL | const _NI128_MOD_P: &i128 = &(1i128 % 0);
   |                              ^^^^^^^^^^^ evaluation of `_NI128_MOD_P` failed here

error[E0080]: attempt to calculate the remainder of `1_u8` with a divisor of zero
  --> $DIR/overflowing-consts.rs:254:22
   |
LL | const _NU8_MOD: u8 = 1u8 % 0;
   |                      ^^^^^^^ evaluation of `_NU8_MOD` failed here

error[E0080]: attempt to calculate the remainder of `1_u8` with a divisor of zero
  --> $DIR/overflowing-consts.rs:255:26
   |
LL | const _NU8_MOD_P: &u8 = &(1u8 % 0);
   |                          ^^^^^^^^^ evaluation of `_NU8_MOD_P` failed here

error[E0080]: attempt to calculate the remainder of `1_u16` with a divisor of zero
  --> $DIR/overflowing-consts.rs:257:24
   |
LL | const _NU16_MOD: u16 = 1u16 % 0;
   |                        ^^^^^^^^ evaluation of `_NU16_MOD` failed here

error[E0080]: attempt to calculate the remainder of `1_u16` with a divisor of zero
  --> $DIR/overflowing-consts.rs:258:28
   |
LL | const _NU16_MOD_P: &u16 = &(1u16 % 0);
   |                            ^^^^^^^^^^ evaluation of `_NU16_MOD_P` failed here

error[E0080]: attempt to calculate the remainder of `1_u32` with a divisor of zero
  --> $DIR/overflowing-consts.rs:260:24
   |
LL | const _NU32_MOD: u32 = 1u32 % 0;
   |                        ^^^^^^^^ evaluation of `_NU32_MOD` failed here

error[E0080]: attempt to calculate the remainder of `1_u32` with a divisor of zero
  --> $DIR/overflowing-consts.rs:261:28
   |
LL | const _NU32_MOD_P: &u32 = &(1u32 % 0);
   |                            ^^^^^^^^^^ evaluation of `_NU32_MOD_P` failed here

error[E0080]: attempt to calculate the remainder of `1_u64` with a divisor of zero
  --> $DIR/overflowing-consts.rs:263:24
   |
LL | const _NU64_MOD: u64 = 1u64 % 0;
   |                        ^^^^^^^^ evaluation of `_NU64_MOD` failed here

error[E0080]: attempt to calculate the remainder of `1_u64` with a divisor of zero
  --> $DIR/overflowing-consts.rs:264:28
   |
LL | const _NU64_MOD_P: &u64 = &(1u64 % 0);
   |                            ^^^^^^^^^^ evaluation of `_NU64_MOD_P` failed here

error[E0080]: attempt to calculate the remainder of `1_u128` with a divisor of zero
  --> $DIR/overflowing-consts.rs:266:26
   |
LL | const _NU128_MOD: u128 = 1u128 % 0;
   |                          ^^^^^^^^^ evaluation of `_NU128_MOD` failed here

error[E0080]: attempt to calculate the remainder of `1_u128` with a divisor of zero
  --> $DIR/overflowing-consts.rs:267:30
   |
LL | const _NU128_MOD_P: &u128 = &(1u128 % 0);
   |                              ^^^^^^^^^^^ evaluation of `_NU128_MOD_P` failed here

error[E0080]: attempt to calculate the remainder of `1_isize` with a divisor of zero
  --> $DIR/overflowing-consts.rs:269:28
   |
LL | const _NISIZE_MOD: isize = 1isize % 0;
   |                            ^^^^^^^^^^ evaluation of `_NISIZE_MOD` failed here

error[E0080]: attempt to calculate the remainder of `1_isize` with a divisor of zero
  --> $DIR/overflowing-consts.rs:270:32
   |
LL | const _NISIZE_MOD_P: &isize = &(1isize % 0);
   |                                ^^^^^^^^^^^^ evaluation of `_NISIZE_MOD_P` failed here

error[E0080]: attempt to calculate the remainder of `1_usize` with a divisor of zero
  --> $DIR/overflowing-consts.rs:272:28
   |
LL | const _NUSIZE_MOD: usize = 1usize % 0;
   |                            ^^^^^^^^^^ evaluation of `_NUSIZE_MOD` failed here

error[E0080]: attempt to calculate the remainder of `1_usize` with a divisor of zero
  --> $DIR/overflowing-consts.rs:273:32
   |
LL | const _NUSIZE_MOD_P: &usize = &(1usize % 0);
   |                                ^^^^^^^^^^^^ evaluation of `_NUSIZE_MOD_P` failed here

error[E0080]: index out of bounds: the length is 3 but the index is 4
  --> $DIR/overflowing-consts.rs:276:24
   |
LL | const _NI32_OOB: i32 = [1, 2, 3][4];
   |                        ^^^^^^^^^^^^ evaluation of `_NI32_OOB` failed here

error[E0080]: index out of bounds: the length is 3 but the index is 4
  --> $DIR/overflowing-consts.rs:277:28
   |
LL | const _NI32_OOB_P: &i32 = &([1, 2, 3][4]);
   |                            ^^^^^^^^^^^^^^ evaluation of `_NI32_OOB_P` failed here

error: aborting due to 170 previous errors

For more information about this error, try `rustc --explain E0080`.
